# physkit

./: .editorconfig  LICENSE  README.md  pyproject.toml
dev/: spike_PhysicsFunction.ipynb
docs/: physkit.thermo.vaporpressure.VaporPressureCurve.md  physkit.thermo.vaporpressure.md  physkit.units.temperature.md
examples/solidstate/: dev_KSCF.py  smoke_particleinabox.py
notebooks/: control.01_lagrange.01_Intro.ipynb  coulomb_energy_functional.ipynb  generalized_piab2d.ipynb  ideal_gas_law.ipynb  lineintegrals.ipynb  math_multivar_domain_range.ipynb  math_poisson1d.ipynb  math_trapezoidrule.ipynb  mb_distribution.ipynb  mb_velocity_distribution.ipynb  phys104_N01_piab1d.ipynb  qm.1d.piab.analytical.ipynb  qm.1d.piab.numerical.ipynb  qm_infinite_square_well_1d.ipynb  qm_piab1d_analytical.ipynb  rruff_raman_raw.ipynb  sempy.py  sempy_directgeneration.ipynb  sempy_electron_density.ipynb  sempy_mobility_01_lattice_scattering.ipynb  sempy_mobility_02_impurity_scattering.ipynb  sempy_mobility_03_total_mobility.ipynb  sempy_resistivity.ipynb  simple_harmonic_motion.ipynb  solidstate.py  spd_system.py  sze_ch2_01_01_mobility.ipynb  sze_ch3_01.ipynb  thermal_debroglie_wavelength.ipynb  units.ipynb  waves_diffraction.ipynb  wpd_blackbodyradiation.ipynb
notebooks/basic/: 01_discretization_1d.ipynb  dev_discretization_1d.ipynb  elements.ipynb  test_Grid1D.py  test_GridType1D_smoke.py
notebooks/fem/: dev.01_discretization1d.ipynb
notebooks/gas/: dev_maxwell_speed_pdf.ipynb  knudsen_number.ipynb
notebooks/kinematics/: kinematics1d_01.ipynb
notebooks/qm/: deBroglie.ipynb  (+2 more)
(+136 files in other folders)
