[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physkit"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [
  {name = "Eugene Joseph M. Ragasa"}
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.10",
  "matplotlib>=3.8",
  "sympy>=1.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0"
]



[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast, isolated tests",
  "integration: crosses module boundaries",
  "slow: long-running tests"
]

